--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.11",
     "astro": "^5.2.5",
+    "sass": "^1.84.0",
     "typescript": "^5.7.3"
   }
 }
